Eclipse 2019-06 Maven and Gradle improvements